--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "open-react-template",
+  "name": "inhouse-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cruip/open-react-template.git"
+    "url": "git@github.com:camin-mccluskey/inHouse-Web.git"
   },
   "scripts": {
     "start": "react-scripts start",
