--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "inhouse-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://camin-mccluskey.github.io/inHouse-Web",
   "dependencies": {
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,5 +41,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
